# OpenCloudTouch

./: .ci-config.json  .ci-config.md  .dockerignore  .env.example  .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  ACTION_ITEMS.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  ITERATION_1C_COMPLETE.md  MIGRATION.md  NOTICE  README.md  SECURITY.md  TRADEMARK.md  clear-database.ps1  config.example.yaml  demo_radio_api.py  docker-compose.yml  fetch-api-schemas-complete.ps1  fetch-api-schemas.ps1  package-lock.json  package.json  pre-commit.ps1  preset_final.xml  preset_list_after_oct.xml  preset_test.json  pytest.ini  test-error-response.ps1  test_absolut_relax.py  test_mock_discovery.py
apps/backend/: README.md  entrypoint.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/: .gitignore  Dockerfile  README.md  __init__.py  config.py  coverage.json  exceptions.py  logging_config.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/adapters/: bosesoundtouch_adapter.py  capability_detection.py  radio_provider.py  radiobrowser_adapter.py  ssdp_discovery.py
backend/api/: __init__.py  devices.py  radio.py
backend/bose_api/: FETCH_COMPLETE_DOCS.md  PROBLEM_ANALYSIS.md  README.md  SCHEMA_DIFFERENCES.md  analyze_api.py  compare_api_sources.py  consolidate_schemas.py  device_78_DSPMonoStereo.xml  device_78_addGroup.xml  device_78_addZoneSlave.xml  device_78_bass.xml  device_78_bassCapabilities.xml  device_78_cancelPairLightswitch.xml  device_78_capabilities.xml  device_78_clockDisplay.xml  device_78_clockTime.xml  device_78_factoryDefault.xml  device_78_getGroup.xml  device_78_getZone.xml  device_78_info.xml  device_78_introspect.xml  device_78_key.xml  device_78_language.xml  device_78_name.xml  device_78_netStats.xml  device_78_networkInfo.xml  device_78_nowPlaying.xml  device_78_nowSelection.xml  device_78_pairLightswitch.xml  device_78_powerManagement.xml  device_78_presets.xml  device_78_pushCustomerSupportInfoToMarge.xml  device_78_removeGroup.xml  device_78_removeMusicServiceAccount.xml  device_78_removeZoneSlave.xml  device_78_select.xml  device_78_setZone.xml  device_78_sourceDiscoveryStatus.xml  device_78_sources.xml  device_78_storePreset.xml  (+82 more)
backend/db/: __init__.py  devices.py
backend/discovery/: manual.py
backend/tests/: conftest.py
(+675 files in other folders)
