[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencloudtouch"
version = "0.2.0"
description = "Local control for compatible streaming devices after cloud shutdown"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "fastapi==0.129.0",
    "uvicorn[standard]==0.40.0",
    "httpx==0.28.1",
    "aiosqlite==0.22.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.0",
    "pyyaml==6.0.3",
    "bosesoundtouchapi==1.0.86",
    "defusedxml==0.7.1",
    "websockets==13.1",
    "ssdpy==0.4.1",
    "asyncssh==2.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "pytest-timeout==2.4.0",
    "pytest-xdist==3.8.0",
    "respx==0.22.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "v$version"
update_changelog_on_bump = true
bump_message = "chore(release): bump version to $new_version"
asyncio_mode = "auto"
addopts = "--strict-markers --tb=short"
